# wasm-game-of-life

./: .gitignore  Cargo.toml  Dockerfile  README.md
benches/: bench.rs  control.txt  variable.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: set_cells.rs
scripts/: bench.sh  develop.sh  fuzz.sh  run.sh  test.sh  variable.txt
src/: lib.rs  utils.rs
tests/: web.rs
www/: bootstrap.js  index.html  index.js  package-lock.json  package.json
