[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Victor Prokhorov <mail@victorprokhorov.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
edition = "2021"

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"]  }
js-sys = "0.3.59"
fixedbitset = "0.4.2"
web-sys = { version = "0.3.59", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
